some utils changes